resources encryption